welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:2: error: not found: value isAsSleep
  if (isAsSleep==true)
      ^